// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateChannel/> spec renders the component 1`] = `
<h1
  class="euiTitle euiTitle--large"
>
  Create channel
</h1>
`;

exports[`<CreateChannel/> spec renders the component for editing chime 1`] = `
<h1
  class="euiTitle euiTitle--large"
>
  Edit channel
</h1>
`;

exports[`<CreateChannel/> spec renders the component for editing chime 2`] = `
<h1
  class="euiTitle euiTitle--large"
>
  Edit channel
</h1>
`;

exports[`<CreateChannel/> spec renders the component for editing email 1`] = `
<h1
  class="euiTitle euiTitle--large"
>
  Edit channel
</h1>
`;

exports[`<CreateChannel/> spec renders the component for editing slack 1`] = `
<h1
  class="euiTitle euiTitle--large"
>
  Edit channel
</h1>
`;

exports[`<CreateChannel/> spec renders the component for editing slack 2`] = `
<h1
  class="euiTitle euiTitle--large"
>
  Edit channel
</h1>
`;

exports[`<CreateChannel/> spec renders the component for editing webhook 1`] = `
<h1
  class="euiTitle euiTitle--large"
>
  Edit channel
</h1>
`;

exports[`<CreateChannel/> spec renders the component for editing webhook 2`] = `
<h1
  class="euiTitle euiTitle--large"
>
  Edit channel
</h1>
`;
